--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,100 @@
 .footer{
-    background-color: #000;
-    height: 5rem;
+    background-color: $blue-dark;
+    height: 25rem;
     width: 100%;
+    border-top: .1rem solid rgba($grey, .2);
 }
+
+.footer__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5rem;
+    width: 100%;
+    height: 20rem;
+}
+
+.footer__info{
+    user-select: none;
+}
+
+.footer__name {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    color: $grey;
+    letter-spacing: .1rem;
+}
+
+.footer__nav {
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+}
+
+.footer__link{
+    margin: 1rem 0;
+    color: $white;
+    font-size: 1.8rem;
+    transition: color .3s ease;
+}
+
+.footer__link:hover{
+    color: $blue;
+}
+
+.footer__mail{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__mail .fa-envelope {
+    font-size: 2.5rem;
+    color: $white;
+}
+
+.footer__email{
+    color: $white;
+    font-size: 1.5rem;
+    margin: 0 1rem;
+}
+
+
+.footer__media{
+    background: #000;
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 8rem 0 8rem;
+    user-select: none;
+}
+
+.footer__socials{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__social-link .fab {
+    font-size: 2rem;
+    color: $white;
+    transition: color .3s ease;
+}
+
+.footer__social-link:hover .fab {
+    color: $blue;
+}
+
+.footer__social-link {
+    margin: 0 .8rem;
+}
+
+.footer__copyright{
+    font-size: 1.5rem;
+    letter-spacing: .1rem;
+    color: $white;
+}
+
+
