--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,11 @@
 .header{
-    width: 100%;
-    height: 6rem;
-    position: absolute;
+    height: 100vh;
+    width: 13%;
+    background: $blue-dark;
+    position: fixed;
     top: 0;
     left: 0;
+    border-right: .1rem solid rgba($grey, .1);
     z-index: 100;
 }
 
@@ -11,47 +13,66 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 0 15rem;
+    padding: 10rem 0 15rem 0;
 }
 
 .header__logo{
-    width: 8rem;
+    width: 13rem;
 }
 
 .navbar{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .navbar__list{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
 }
 
 .navbar__link{
-    margin: 0 1.5rem;
+    border-top: .1rem solid rgba($grey, .3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+}
+
+.navbar__link:last-of-type{
+    border-bottom: .1rem solid rgba($grey, .3);
 }
 
 .navbar__item{
-    font-size: 2rem;
     color: $white;
+    font-size: 2.5rem;
+    transition: color .3s ease;
 }
 
-.navbar__item.active {
+.navbar__item:hover {
+    color: $blue;
+}
+
+.navbar__item.active{
     color: $grey;
 }
 
-.navbar__media {
+.navbar__media{
+    margin: 0 1rem;
     cursor: pointer;
 }
 
-.fa-linkedin,
-.fa-github{
-    margin: 0 .8rem;
-    font-size: 2.5rem;
+.navbar__media .fab{
+    color: $grey;
+    font-size: 2.8rem;
+    transition: color .3s ease;
+}
+
+.navbar__media:hover .fab{
     color: $blue;
 }
+
