--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -1,124 +1,74 @@
 .projects{
     width: 100%;
     height: 100vh;
-    background: $blue-dark;
+    background: url(/dist/Images/project-bg.png) no-repeat bottom center/cover;
 }
 
 .projects__container{
-    width: 90%;
     height: 100%;
+    width: 95%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    position: relative;
 }
 
 .projects__heading{
-    margin-top: 3rem;
-    width: 100%;
+    padding-top: 2rem;
 }
 
-.projects__text{
+.project__head{
     color: $white;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    letter-spacing: .1rem;
     font-weight: 400;
 }
 
-.projects__text span {
+.project__head .project__head-blue{
     color: $blue;
-    font-weight: 400;
+    font-weight: 500;
 }
 
-.projects__paragraph{
-    width: fit-content;
-    color: $grey;
-    font-size: 2rem;
-    margin-top: 1rem;
+.projects__container-2{
+    width: 100%;
+    height: 80rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.projects__showcase{
+.project__showcase{
     width: 100%;
     height: 100%;
-    margin-top: 8rem;
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
 }
 
 .project{
     width: 45rem;
     height: 45rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 1rem;
-}
-
-.project__image{
-    width: 100%;
-    height: 100%;
-} 
-
-.project__image .project__img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.project__info{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 0 5rem;
-    border-radius: .3rem;
-}
-
-.project__info-2{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    margin-bottom: .9rem;
-}
-
-.project__name{
-    font-size: 3rem;
-    color: $blue;
-    letter-spacing: .1rem;
-    margin-top: 2rem;
-    font-weight: 500;
-}
-
-.project__description {
-    color: $grey;
-    font-size: 1.7rem;
-    margin: 1.5rem 0;
-    line-height: 1.4;
-}
-
-.project__media {
-    height: 100%;
-    width: 100%;
-    border-top: .1rem solid #333;
-    padding: 2rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.project__link-img{
-    width: 3.5rem;
+    background-color: #999;
     margin: 0 2rem;
 }
+// .project__link-img{
+//     width: 3.5rem;
+//     margin: 0 2rem;
+// }
 
-.project__link .fa-github{
-    font-size: 3.5rem;
-}
+// .project__link .fa-github{
+//     color: $blue;
+//     font-size: 3.5rem;
+// }
 
-.project:hover .project__info{
-    border-bottom: .1rem solid rgba($grey, .2);
-    border-right: .1rem solid rgba($grey, .2);
-    border-left: .1rem solid rgba($grey, .2);
-    border-radius: .5rem;
-    box-shadow: 0 2px 2px 0 rgba($grey, .1);
+// .project:hover .project__info{
+//     border-bottom: .1rem solid rgba($grey, .2);
+//     border-right: .1rem solid rgba($grey, .2);
+//     border-left: .1rem solid rgba($grey, .2);
+//     border-radius: .5rem;
+//     box-shadow: 0 2px 2px 0 rgba($grey, .1);
+// }
+
+@media screen and (max-width: 1500px){
+
 }
