--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,7 +1,20 @@
 .about{
     width: 100%;
     height: 100vh;
+    background-image: url(/dist/Images/aboutmebckg.png);
     background: url(/dist/Images/aboutmebckg.png) no-repeat bottom center/cover;
+
+    @include responsive(breakpoint4){
+        background-size: 100% 100%;
+    }
+
+    @include responsive(breakpoint2){
+         background: linear-gradient(
+            to bottom,
+            #060606,
+            $blue-dark
+        );
+    }
 }
 
 .about__container{
@@ -10,15 +23,30 @@
     display: flex;
     flex-direction: column;
     padding-left: 3rem;
+
+    @include responsive(breakpoint3){
+        padding-left: 1.5rem;
+    }
+
+    @include responsive(breakpoint2){
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .about__head{
     margin-top: 1rem;
+
+    @include responsive(breakpoint2){
+        text-align: center;
+        word-break: break-all;
+    }
 }
 
 .about__head-main{
     color: $white;
     font-size: 2rem;
+
 }
 
 .about__paragraph{
@@ -34,10 +62,30 @@
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
+
+    @include responsive(breakpoint5){
+        margin-top: 1.5rem;
+    }
+
+    @include responsive(breakpoint3){
+        margin-top: 2rem;
+    }
+
+    @include responsive(breakpoint2){
+        
+    }
 }
 
 .about__skills{
     margin: 2rem 0;
+    
+    @include responsive(breakpoint5){
+        margin: 1.5rem 0;
+    }
+
+    @include responsive(breakpoint3){
+        margin: 1rem 0;
+    }
 }
 
 .about__skills-head{
@@ -45,6 +93,10 @@
     font-size: 3rem;
     text-transform: uppercase;
     font-weight: 500;
+
+    @include responsive(breakpoint2){
+        text-align: center;
+    }
 }
 
 .about__skills-head span{
@@ -57,8 +109,11 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 1.5rem;
-    text-align:justify;
-    text-justify:inter-word;
+
+    @include responsive(breakpoint2){
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 .about__description{
@@ -67,11 +122,23 @@
     color: $grey;
     margin-right: 8rem;
     font-weight: 500;
+    width: auto;
+    word-break: keep-all;
+
+    @include responsive(breakpoint2){
+        margin-right: 0;
+        line-height: 1.3;
+    }
 }
 
 .about__languages{
     display: flex;
     margin-top: 1rem;
+
+    @include responsive(breakpoint2){
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .about__lang{
@@ -79,10 +146,20 @@
     color: $grey;
     text-transform: capitalize;
     margin-right: 10.3rem;
+
+    @include responsive(breakpoint2){
+        margin-right: 0;
+        line-height: 1.3;
+    }
 }
 
 .about__certification-view{
     display: flex;
+
+    @include responsive(breakpoint2){
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 .btn-cert{
@@ -95,6 +172,15 @@
     opacity: .3;
     cursor: pointer;
     transition: all .5s ease;
+
+    @include responsive(breakpoint2){
+        padding: 1rem 4rem;
+        font-size: 1.6rem;
+        opacity: .4;
+        border: 1px solid rgba($grey, .6);
+        margin-left: 0;
+        margin: .5rem 0;
+    }
 }
 
 .btn-cert:hover{
@@ -113,6 +199,13 @@
 
 .about__certification {
     margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+
+    @include responsive(breakpoint2){
+        align-items: center;
+        text-align: center;
+    }
 }
 
 .about__certification-head{
@@ -136,5 +229,14 @@
     text-transform: capitalize;
     font-size: 1.8rem;
     line-height: 1.1;
-    cursor: pointer;
+
+    @include responsive(breakpoint2){
+        line-height: 1.3;
+    }
 }
+
+// @media screen and (max-width:1380px){
+//     .about{
+//         background-size: 100% 100%;
+//     }
+// }
