--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,6 +7,16 @@
     left: 0;
     border-right: .1rem solid rgba($grey, .1);
     z-index: 100;
+    transition: left .3s ease;
+
+    @include responsive(breakpoint5){
+        width: 100vw;
+        left: -100%;
+    }
+}
+
+.header.change{
+    left: 0;
 }
 
 .header__container{
@@ -41,6 +51,10 @@
     align-items: center;
     justify-content: center;
     padding: 2rem 0;
+
+    @include responsive(breakpoint4){
+        padding: 3rem 0;
+    }
 }
 
 .navbar__link:last-of-type{
@@ -61,9 +75,40 @@
     color: $grey;
 }
 
+.btn__close-header{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    background: none;
+    border: none;
+    outline:none;
+    display: none;
+
+    @include responsive(breakpoint5){
+        display: block;
+    }
+}
+
+.btn__close-header:focus{
+    outline: none;
+}
+
+.btn__close-header span{
+    color: $blue;
+    font-size: 3rem;
+}
+
 .navbar__media{
     margin: 0 1rem;
     cursor: pointer;
+
+    @include responsive(breakpoint6){
+        margin: 0 .2rem;
+    }
+
+    @include responsive(breakpoint4){
+        margin: 0 1rem;
+    }
 }
 
 .navbar__media .fab{
@@ -76,3 +121,28 @@
     color: $blue;
 }
 
+.hamburger-menu{
+    width: 3.5rem;
+    height: 3.5rem;
+    position: fixed;
+    top: 2rem;
+    right: 1rem;
+    display: flex;
+    z-index: 1000;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+
+    @include responsive(breakpoint5){
+        opacity: 1;
+        visibility: visible;
+    }
+}
+.line{
+    width: 100%;
+    height: .3rem;
+    background-color: $blue;
+    transition: transform .3s ease-in;
+}
