Added lazy loading and media queries for iphone x

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -21,6 +21,10 @@ html{
     @include responsive(breakpoint1){
         font-size: 45%;
     }
+
+    @include responsive(breakpoint1sm){
+        font-size: 42%;
+    }
 }
 
 body{
