--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -59,6 +59,10 @@
     @include responsive(breakpoint1){
         max-width: 52%;
     }
+
+    @include responsive(breakpoint1xsm){
+        max-width: 60%;
+    }
 }
 
 .projects__showcase-container{
@@ -172,6 +176,16 @@
         margin: 0 3.5rem;
         width: 34rem;
     }
+
+    @include responsive(breakpoint1sm){
+        margin: 0 3.9rem;
+        width: 30rem;
+    }
+
+    @include responsive(breakpoint1xsm){
+        margin: 0 1.6rem;
+        width: 26rem;
+    }
 }
 
 .project{
@@ -206,6 +220,15 @@
 
     @include responsive(breakpoint2){
         width: 75%;
+    }
+
+    @include responsive(breakpoint1sm){
+        margin-top: -1.7rem;
+    }
+
+    @include responsive(breakpoint1xsm){
+        width: 85%;
+        margin-top: -2.8rem;
     }
 }
 
