--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -13,6 +13,39 @@
     display: block;
 }
 
+.modal-cv{
+    background-color: #000;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: none;
+}
+
+.modal-cv.show-cv{
+    display: block;
+}
+
+.modal__cv--container{
+    height: 90%;
+    max-width: 70rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: .4rem;
+    box-shadow: 0 0 .5rem .3rem rgba($blue, .4);
+    padding: 1rem 0 1rem 1.5rem;
+}
+
+.modal__cv-image{
+    max-width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .modal{
     width: 90%;
     height: 90%;
